samples/_failures_safe/1761498318_62e534_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e9d94781.c: In function ‘main’:
./samples/SAFE/__tmp_e9d94781.c:149:12: error: missing terminating " character
  149 |     printf("Commands: 0=START, 1=DATA_READY, 2=PROCESS_COMPLETE, 3=WRITE_COMPLETE, 4=ERROR, 5=RESET, 6=
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e9d94781.c:149:5: error: expected expression at end of input
  149 |     printf("Commands: 0=START, 1=DATA_READY, 2=PROCESS_COMPLETE, 3=WRITE_COMPLETE, 4=ERROR, 5=RESET, 6=
      |     ^~~~~~
./samples/SAFE/__tmp_e9d94781.c:149:5: error: expected declaration or statement at end of input
